test/errors/compiler_times_1.ms
a = *1
// Compiler Error: got OpTimes where number, string, or identifier is required
